--- a/src/components/LabsModels-Iframe/LMIframe.css
+++ b/src/components/LabsModels-Iframe/LMIframe.css
@@ -1,4 +1,38 @@
-.LM-image{
-  width: 25%;  
+.LM-div {
+  display: flex;
+  justify-content: center;
+  width: 100%;
   cursor: pointer;
+  margin-bottom: 2rem;
+}
+
+.LM-div div {
+  width: auto;
+  border: 1px solid white;
+  padding: 1.5rem 0rem;
+  border: 2px white solid;
+  border-radius: 1rem;
+  position: relative;
+}
+.LM-div img {
+  width: 70%;
+}
+.LM-div h2 {
+  box-sizing: border-box;
+  position: absolute;
+  bottom: -1.25rem;
+  width: 100%;
+  left: 0;
+  font-weight: 400;
+  border-radius: 0rem 0rem 1rem 1rem;
+  padding: 0.7rem 1rem;
+  background: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(8px);
+}
+
+@media (max-width: 768px) {
+  .LM-div h2 {
+    font-size: 1rem;
+    bottom: -0.925rem;
+  }
 }
